Fixed page width issue on smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,6 +156,12 @@ h2 span {
     padding-bottom: 50px;
 }
 
+.carousel-control-next-icon, 
+.carousel-control-prev-icon {
+    width: 40px;
+    height: 40px;
+}
+
 /* --------------------------------- Section Containers */
 
 .container-wrapper--about {
@@ -165,6 +171,7 @@ h2 span {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    width: 100%;
 }
 
 .container-wrapper--music {
@@ -173,6 +180,7 @@ h2 span {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    width: 100%;
 }
 
 .container-wrapper--merch {
@@ -182,6 +190,7 @@ h2 span {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    width: 100%;
 }
 
 .container-wrapper--video {
@@ -190,6 +199,7 @@ h2 span {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
+    width: 100%;
 }
 
 .container-wrapper--tour {
@@ -200,6 +210,7 @@ h2 span {
     -moz-background-size: cover;
     -o-background-size: cover;
     padding-bottom: 40px;
+    width: 100%;
 }
 
 .container-wrapper--news {
@@ -209,6 +220,7 @@ h2 span {
     -moz-background-size: cover;
     -o-background-size: cover;
     padding-bottom: 40px;
+    width: 100%;
 }
 
 .container-wrapper--contact {
@@ -218,6 +230,7 @@ h2 span {
     -moz-background-size: cover;
     -o-background-size: cover;
     padding-bottom: 40px;
+    width: 100%;
 }
 
 .about-content-container,
@@ -334,7 +347,7 @@ h2 span {
 
 .card {
     margin: auto;
-    height: 100%;
+    /*height: 100%;*/
     color: #000;
     font-family: 'logo-font', 'Roboto', Arial, sans-serif;
 }
